--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,16 @@
 services:
-- type: postgres
+- type: postgresql
   name: telemed-db
   plan: starter
   databaseName: telemed
   user: telemed
   ipAllowList: []
+
 - type: redis
   name: telemed-cache
   plan: starter
   ipAllowList: []
+
 - type: web
   name: telemed-deploy-ready
   env: python
@@ -20,15 +22,16 @@ services:
   healthCheckPath: /
   autoDeploy: true
   envVars:
-  - key: DATABASE_URL
-    fromDatabase:
-      name: telemed-db
-      property: connectionString
-  - key: REDIS_URL
-    fromService:
-      name: telemed-cache
-      type: redis
-      property: connectionString
+    - key: DATABASE_URL
+      fromDatabase:
+        name: telemed-db
+        property: connectionString
+    - key: REDIS_URL
+      fromService:
+        name: telemed-cache
+        type: redis
+        property: connectionString
+
 - type: web
   name: medicaldesk-1
   env: node
@@ -40,15 +43,16 @@ services:
   healthCheckPath: /
   autoDeploy: true
   envVars:
-  - key: DATABASE_URL
-    fromDatabase:
-      name: telemed-db
-      property: connectionString
-  - key: REDIS_URL
-    fromService:
-      name: telemed-cache
-      type: redis
-      property: connectionString
+    - key: DATABASE_URL
+      fromDatabase:
+        name: telemed-db
+        property: connectionString
+    - key: REDIS_URL
+      fromService:
+        name: telemed-cache
+        type: redis
+        property: connectionString
+
 - type: web
   name: receitacerta
   env: node
@@ -60,15 +64,16 @@ services:
   healthCheckPath: /
   autoDeploy: true
   envVars:
-  - key: DATABASE_URL
-    fromDatabase:
-      name: telemed-db
-      property: connectionString
-  - key: REDIS_URL
-    fromService:
-      name: telemed-cache
-      type: redis
-      property: connectionString
+    - key: DATABASE_URL
+      fromDatabase:
+        name: telemed-db
+        property: connectionString
+    - key: REDIS_URL
+      fromService:
+        name: telemed-cache
+        type: redis
+        property: connectionString
+
 - type: web
   name: telemed-auction
   env: node
@@ -80,33 +85,34 @@ services:
   healthCheckPath: /healthz
   autoDeploy: true
   envVars:
-  - key: DATABASE_URL
-    fromDatabase:
-      name: telemed-db
-      property: connectionString
-  - key: REDIS_URL
-    fromService:
-      name: telemed-cache
-      type: redis
-      property: connectionString
-  - key: JWT_SECRET
-    value: change-me
-  - key: INTERNAL_TOKEN
-    value: change-me-internal
-  - key: PUBLIC_BASE_URL
-    value: https://telemed-deploy-ready.onrender.com
-  - key: AUCTION_ENABLED
-    value: 'true'
-  - key: AUCTION_IMMEDIATE_EXPIRES_MIN
-    value: '15'
-  - key: AUCTION_MIN_PRICE_DEFAULT_IMMEDIATE_CENTS
-    value: '8000'
-  - key: AUCTION_MIN_PRICE_DEFAULT_SCHEDULED_CENTS
-    value: '6000'
-  - key: PAYMENTS_PROVIDER
-    value: mock
-  - key: INTERNAL_URL_TELEMED
-    value: https://telemed-internal.onrender.com
+    - key: DATABASE_URL
+      fromDatabase:
+        name: telemed-db
+        property: connectionString
+    - key: REDIS_URL
+      fromService:
+        name: telemed-cache
+        type: redis
+        property: connectionString
+    - key: JWT_SECRET
+      value: change-me
+    - key: INTERNAL_TOKEN
+      value: change-me-internal
+    - key: PUBLIC_BASE_URL
+      value: https://telemed-deploy-ready.onrender.com
+    - key: AUCTION_ENABLED
+      value: 'true'
+    - key: AUCTION_IMMEDIATE_EXPIRES_MIN
+      value: '15'
+    - key: AUCTION_MIN_PRICE_DEFAULT_IMMEDIATE_CENTS
+      value: '8000'
+    - key: AUCTION_MIN_PRICE_DEFAULT_SCHEDULED_CENTS
+      value: '6000'
+    - key: PAYMENTS_PROVIDER
+      value: mock
+    - key: INTERNAL_URL_TELEMED
+      value: https://telemed-internal.onrender.com
+
 - type: web
   name: telemed-internal
   env: node
@@ -118,12 +124,13 @@ services:
   healthCheckPath: /healthz
   autoDeploy: true
   envVars:
-  - key: DATABASE_URL
-    fromDatabase:
-      name: telemed-db
-      property: connectionString
-  - key: INTERNAL_TOKEN
-    value: change-me-internal
+    - key: DATABASE_URL
+      fromDatabase:
+        name: telemed-db
+        property: connectionString
+    - key: INTERNAL_TOKEN
+      value: change-me-internal
+
 - type: web
   name: telemed-productivity
   env: node
@@ -135,15 +142,15 @@ services:
   healthCheckPath: /healthz
   autoDeploy: true
   envVars:
-  - key: DATABASE_URL
-    fromDatabase:
-      name: telemed-db
-      property: connectionString
-  - key: JWT_SECRET
-    value: change-me
-  - key: OPENAI_API_KEY
-    value: ''
-  - key: OPENAI_WHISPER_MODEL
-    value: whisper-1
-  - key: OPENAI_LLM_MODEL
-    value: gpt-4o-mini
+    - key: DATABASE_URL
+      fromDatabase:
+        name: telemed-db
+        property: connectionString
+    - key: JWT_SECRET
+      value: change-me
+    - key: OPENAI_API_KEY
+      value: ''
+    - key: OPENAI_WHISPER_MODEL
+      value: whisper-1
+    - key: OPENAI_LLM_MODEL
+      value: gpt-4o-mini
