--- a/apps/productivity-service/package.json
+++ b/apps/productivity-service/package.json
@@ -14,9 +14,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "zod": "^3.23.8",
-    "node-fetch": "^3.3.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "prisma": "^5.16.1"
