--- a/apps/medical-desk-advanced/client/package.json
+++ b/apps/medical-desk-advanced/client/package.json
@@ -37,27 +37,29 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.1.15",
     "@tanstack/react-query": "^5.51.1",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.554.0",
+    "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.1",
+    "react-hot-toast": "^2.6.0",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.24.1",
     "recharts": "^3.4.1",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^3.4.4",
     "vaul": "^1.1.2",
-    "wouter": "^3.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
     "vite": "^5.3.3",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4"
+    "wouter": "^3.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
