--- a/apps/telemed-internal/package.json
+++ b/apps/telemed-internal/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "http-proxy-middleware": "^2.0.6",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "openai": "^4.104.0"
   },
