--- a/apps/telemed-internal/package.json
+++ b/apps/telemed-internal/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.16.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "drizzle-orm": "^0.30.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "openai": "^4.104.0"
+    "openai": "^4.104.0",
+    "postgres": "^3.4.3"
   },
   "devDependencies": {
     "prisma": "^5.16.1"
