--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "workspace",
   "type": "module",
-  "scripts": {
-    "dev": "node index.js",
-    "start": "node server.js"
-  },
+  {
+    "scripts": {
+      "dev": "node index.js",
+      "start": "node server.js",
+      "build": "cd client && npm install && npm run build"
+    }
+  }
+
   "dependencies": {
     "@tanstack/react-query": "^5.90.10",
     "@types/bcryptjs": "^2.4.6",
