--- a/package.json
+++ b/package.json
@@ -1,48 +1,20 @@
 {
-  "name": "workspace",
+  "name": "telemed-merged",
+  "private": true,
   "type": "module",
-  {
-    "scripts": {
-      "dev": "node index.js",
-      "start": "node server.js",
-      "build": "cd client && npm install && npm run build"
-    }
-  }
-
-  "dependencies": {
-    "@tanstack/react-query": "^5.90.10",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/pg": "^8.15.6",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "autoprefixer": "^10.4.22",
-    "bcryptjs": "^3.0.3",
-    "concurrently": "^9.2.1",
-    "cors": "^2.8.5",
-    "cross-env": "^10.1.0",
-    "drizzle-kit": "^0.31.7",
-    "drizzle-orm": "^0.44.7",
-    "express": "^5.1.0",
-    "express-rate-limit": "^8.2.1",
-    "framer-motion": "^12.23.24",
-    "http-proxy-middleware": "^3.0.5",
+  "scripts": {
+    "dev": "node index.js",
+    "start": "node server.js",
+    "build": "cd client && npm install && npm run build",
+    "test:e2e": "playwright test",
+    "pw:browsers": "playwright install --with-deps",
+    "preview": "vite preview --port 5173 --strictPort --host 127.0.0.1",
+    "test:server": "cd .. && npm run dev"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.55.0",
+    "@types/node": "^20.0.0",
     "http-server": "^14.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.554.0",
-    "nodemon": "^3.1.10",
-    "openai": "^6.9.1",
-    "pg": "^8.16.3",
-    "playwright": "^1.56.1",
-    "react-dom": "^19.2.0",
-    "react-hot-toast": "^2.6.0",
-    "recharts": "^3.4.1",
-    "tailwindcss": "^3.4.18",
-    "tsx": "^4.20.5",
-    "typescript": "^5.9.2",
-    "vite": "^7.2.4",
-    "wait-on": "^9.0.0",
-    "wouter": "^3.7.1",
-    "zod": "^4.1.13"
+    "wait-on": "^7.2.0"
   }
 }
