--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "node-cron": "^3.0.3",
     "http-proxy-middleware": "^3.0.0",
     "morgan": "^1.10.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "drizzle-orm": "^0.33.0",
+    "postgres": "^3.4.4"
   }
 }
