--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "jsonwebtoken": "^9.0.2",
     "drizzle-orm": "^0.33.0",
-    "postgres": "^3.4.4"
+    "postgres": "^3.4.4",
+    "bcryptjs": "^2.4.3"
   }
 }
