--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "drizzle-orm": "^0.33.0",
     "postgres": "^3.4.4",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "express-rate-limit": "^7.4.0"
   }
 }
