--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "drizzle-orm": "^0.33.0",
     "postgres": "^3.4.4",
     "bcryptjs": "^2.4.3",
-    "express-rate-limit": "^7.4.0"
+    "express-rate-limit": "^7.4.0",
+    "zod": "^3.23.8"
   }
 }
