--- a/apps/medical-desk-advanced/client/package.json
+++ b/apps/medical-desk-advanced/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -50,7 +51,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.66.1",
+    "react-hook-form": "^7.67.0",
     "react-hot-toast": "^2.6.0",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.24.1",
@@ -59,7 +60,8 @@
     "tailwindcss": "^3.4.4",
     "vaul": "^1.1.2",
     "vite": "^5.3.3",
-    "wouter": "^3.3.0"
+    "wouter": "^3.3.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
